--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
   <header>
     <nav class="navbar header-nav header-nav-white fixed-top navbar-expand-lg">
       <div class="container">
-        <!-- Brand -->
-        <a class="navbar-brand" href="#">JAN<span class="theme-bg"></span></a>
+        <!-- Brand --> 
+        <img src="static/img/JAN 3.png" alt="Just Analytical News" width="100" height="100">
+        <!-- <a class="navbar-brand" href="#">JAN<span class="theme-bg"></span></a> -->
         <!-- / -->
 
         <!-- Mobile Toggle -->
@@ -89,8 +90,8 @@
   <main>
 
     <!-- Welcome Start -->
-    <section id="welcome-box" class="home-banner-01" style="background: rgb(72,130,150);
-    background: linear-gradient(90deg, rgba(72,130,150,1) 21%, rgba(78,166,184,1) 53%, rgba(84,210,195,1) 90%, rgba(91,252,216,1) 100%);">
+    <section id="welcome-box" class="home-banner-01" style="background: rgb(67,16,162);
+    background: linear-gradient(90deg, rgba(67,16,162,1) 14%, rgba(20,80,177,1) 39%, rgba(26,135,175,1) 68%, rgba(34,173,191,1) 100%);">
 
       <div class="sec-round">
         <div class="container full-height">
@@ -127,7 +128,7 @@
   <div class="row justify-content-center m-45px-b md-m-25px-b">
   <div class="col-12 col-md-10 col-lg-7">
   <div class="section-title text-center">
-  <h2 class="font-alt">Dashboard</h2>
+  <h2 class="font-alt">About</h2>
   <p> </p>
   <br>
   <p></p>
@@ -141,29 +142,107 @@
   </section>
   <!-- Dashboard End -->
 
-    <!-- About -->
-    <section id="About" class="section p-0px-b">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-md-6">
-            <div class="about-left">
-              <h2>About</h2>
-              <h3>Text</h3>
-             <!-- <h2>What We Do</h2> -->
-              <!-- <h3> <a class="m-btn-link theme-after" href="#gallery">Gallery</a> for more!</h3> -->
+   <!-- Service Start -->
+   <section id="services" class="section gray-bg services-section">
+    <div class="container">
+      <div class="row justify-content-center m-45px-b md-m-30px-b sm-m-25px-b">
+        <div class="col-12 col-md-10 col-lg-7">
+          <div class="section-title text-center">
+            <h2 class="font-alt">Dashboards</h2>
+            <p>Dashboards.</p>
+          </div>
+        </div>
+      </div> <!-- row -->
 
-              <a class="m-btn m-btn-theme" href="#contact us">Contact Us <i class="ti-arrow-right"></i></a>
+      <div class="row">
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="feature-box-02">
+            <!-- <i class="icon theme-bg ti-ruler-pencil"></i> -->
+            <img src="" alt="Pic" width="110" height="100">
+            <div class="feature-content">
+              <h5> <br> Category</h5>
+              <p> Category stuff<br> <br> </p>
+              <div class="read-more">
+                <!-- <a href="http://wehackutd.com/" target="_blank" class="more-btn">Read More <i class="ti-arrow-right"></i></a> -->
+              </div>
             </div>
-          </div> <!-- col -->
+          </div> <!-- feature-box-02 -->
+        </div> <!-- col -->
 
-          <div class="col-md-6 text-center sm-m-45px-t">
-            <img src="" title="" alt="">
-          </div> <!-- col -->
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="feature-box-02">
+            <!-- <i class="icon theme-bg ti-image"></i> -->
+            <img src="" alt="Pic" width="170" height="100">
+            <div class="feature-content">
+              <h5> <br> Category</h5>
+              <p>Category stuff<br> <br> </p>
+              <div class="read-more">
+              <!--  <a href="#" class="more-btn">Read More <i class="ti-arrow-right"></i></a> -->
+              </div>
+            </div>
+          </div> <!-- feature-box-02 -->
+        </div> <!-- col -->
 
-        </div> <!-- row -->
-      </div> <!-- container -->
-    </section>
-    <!-- / -->
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="feature-box-02">
+             <!-- <i class="icon theme-bg ti-layout"></i> -->
+             <img src="" alt="Pic" width="110" height="100">
+            <div class="feature-content">
+              <h5> <br> Category</h5>
+              <p>Category stuff</p>
+              <div class="read-more">
+               <!--  <a href="#" class="more-btn">Read More <i class="ti-arrow-right"></i></a> -->
+              </div>
+            </div>
+          </div> <!-- feature-box-02 -->
+        </div> <!-- col -->
+
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="feature-box-02">
+           <!-- <i class="icon theme-bg ti-camera"></i> -->
+           <img src="" alt="Pic" width="110" height="100">
+            <div class="feature-content">
+              <h5> <br> Politics</h5>
+              <p>Congress stuff<br> <br></p>
+              <div class="read-more">
+               <!-- <a href="http://wehackutd.com/" class="more-btn">Read More <i class="ti-arrow-right"></i></a> -->
+              </div>
+            </div>
+          </div> <!-- feature-box-02 -->
+        </div> <!-- col -->
+
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="feature-box-02">
+            <!-- <i class="icon theme-bg ti-brush-alt"></i> -->
+            <img src="" alt="Pic" width="110" height="120">
+            <div class="feature-content">
+              <h5>COVID</h5>
+              <p> Cases stuff<br> <br> </p>
+              <div class="read-more">
+                <!-- <a href="#" class="more-btn">Read More <i class="ti-arrow-right"></i></a> -->
+              </div>
+            </div>
+          </div> <!-- feature-box-02 -->
+        </div> <!-- col -->
+
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="feature-box-02">
+            <!-- <i class="icon theme-bg ti-world"></i> -->
+            <img src="" alt="Pic" width="120" height="100">
+            <div class="feature-content">
+              <h5> <br> GIS</h5>
+              <p> Map stuff<br> <br> </p>
+              <div class="read-more">
+                <!-- <a href="#" class="more-btn">Read More <i class="ti-arrow-right"></i></a> -->
+              </div>
+            </div>
+          </div> <!-- feature-box -->
+        </div> <!-- col -->
+
+      </div> <!-- row -->
+    </div> <!-- container -->
+  </section>
+  <!-- Service End -->
 
 
     <!-- Counter Start -->
